removed filezilla from base install

--- a/Inception/Makefile
+++ b/Inception/Makefile
@@ -18,7 +18,7 @@ docker: sudoers
 	@echo "Installing Docker..."
 	
 	@echo "Adding Docker's official GPG key..."
-	@sudo apt update
+	@sudo apt update -y && sudo apt upgrade -y
 	@sudo apt install -y ca-certificates curl
 	@sudo install -m 0755 -d /etc/apt/keyrings
 	@sudo curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
@@ -32,10 +32,6 @@ docker: sudoers
 	@sudo usermod -aG docker $(USER)
 	@echo "Docker installed successfully!"
 	@echo "User $(USER) added to Docker group."
-
-	@echo "Installing Filezilla..."
-	@sudo apt install -y filezilla
-	@echo "Filezilla installed successfully!"
 	
 	@sudo apt autoremove -y
 
